# final-year-project

./: .gitignore  .pre-commit-config.yaml  CODE_ARCHITECTURE_AND_EXECUTION_FLOW.md  LICENSE  README.md  TECHNICAL_DEEP_DIVE.md  pyproject.toml  requirements.txt  run_app.py  run_pipeline.py
.github/workflows/: ci.yml
data/: synthetic_cbc_assessments.csv
docs/appendices/: interview_guide.md  teacher_questionnaire.md
src/cbc_xai/: __init__.py  app.py  config.py  domain.py  exceptions.py  features.py  ingestion.py  logging_config.py  modeling.py  reporting.py  rules.py  storage.py  synthetic_data.py
tests/: conftest.py  test_explanation_direction.py  test_features_edge_cases.py  test_ingestion.py  test_pipeline.py  test_rules.py  test_users.py
tests/fixtures/: small_assessments.csv
